# CocinEco

./: .env.template  .gitignore  .pre-commit-config.yaml  Main_Menu.py  Main_Menu_app.py  Meal-Plan_Ahmad_2024-11-29 13-57-28.csv  Meal-Plan_Albert_2024-11-29 13-55-35.csv  Meal-Plan_Albert_2024-12-10 13-59-17.csv  Meal-Plan_Antonio_2024-11-29 13-49-34.csv  Meal-Plan_Cherry_2024-11-29 13-58-45.csv  Meal-Plan_Ivo_2024-11-29 13-56-54.csv  Meal-Plan_Mia_2024-11-29 13-58-03.csv  Meal-Plan_Paula_2024-11-29 13-50-26.csv  OpenFoodFacts.ipynb  RAG_agent_definition.py  README.md  agents_profiles.py  app.py  old_app.py  openfoodfacts_data.csv  product_example_1.json  product_example_2.json  profiles.py  pyproject.toml  requirements.txt  simulation.py  supported_countries.py  test_email.py  user_profiles.py
.streamlit/: config.toml
data/: country_list.py  spanish_english_item_nutrient_info.csv
data/agriculture/: production_norm_filtered.csv
data/diet_guidelines/: diet_guidelines_urls.txt
data/health_risks/: fs_norm_filtered.csv
data/recipes/: recipes_1_very_small.csv  recipes_urls.txt
pages/: 1_Individual_Planner.py  2_Familly_Planner copy.py  2_Family_Planner.py  2_Individual_Planner_old.py  3_Professional_Planner.py
