[project]
name = "cocineco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=0.5.18",
    "langchain>=0.3.7",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.5",
    "langchain-openai>=0.2.6",
    "p4python>=2024.1.2645203",
    "pandas>=2.2.3",
    "streamlit>=1.42.0",
    "pysqlite3-binary>=0.5.4",
    "bs4>=0.0.2",
    "pypdf>=5.4.0",
]

[tool.isort]
force_single_line = true
profile = "black"

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]
